[metadata]
name = pgusers
version = attr:pgusers.version
author = Javier Llopis
author_email = javier@llopis.me
description = user and session management on postgresql database
url = https://github.com/destrangis/pgusers

[options]
install_requires = psycopg2-binary
setup_requires = psycopg2-binary
packages = find:

[options.entry_points]
console_scripts =
    usermgr = pgusers.pgusrmanager:main
